rnsc/test_data/rns_integration/error/parser/instructions/trailing_tokens_after_instr.rns
.class TrailingTokensAfterInstr
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc @string "Hello World!" extra_token
    return
  .code_end
.method_end
.class_end
